# Team12-Real-Time-Embedded-Programming-2024-25

./: 1.rtf  LICENSE.txt  Peining cg  Peining cg.cpp  README.md  The presentation video  data_finger_impl.cpp  data_keyboard_impl.cpp
Modules Test/: Add Fingerprint Test  Change password Test  Electronic eyehole Test.txt  Verify Fingerprint Test  echo examine and camera Continuous shooting
Peining rz code/: File CMakeLists.txt  database.cpp  database.h  face_recognition.cpp  face_recognition.h  gpio_control.cpp  gpio_control.h  main.cpp  web_server.cpp  web_server.h
Peining-code/mutex/modules/echo/: data_echo_impl.cpp
Project Ducument/Division of labor scheme/: Division of labor scheme.docx
aiView/: Makefile  aiView.pro  aiView.sh  data.cpp  data.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  qmake_qmake_qm_files.qrc  qrc_qmake_qmake_qm_files.cpp  ui_mainwindow.h  zmq_subscriber.cpp  zmq_subscriber.hpp
audio/: audio set.txt
echo/: data_echo_impl.cpp
finger/finger/: CMakeLists.txt  data_finger_impl.cpp
finger/finger/fingerlib/: finger.cpp  finger.hpp
keyBoard/: data_keyboard_impl.cpp
mutex/: CMakeLists.txt  Makefile  build.sh
mutex v0.0.1/lib/product/: serial_test
mutex v0.0.1/modules/center/release/src/: node_impl.cpp
mutex v0.0.1/modules/center/release/src/components/: mutex_common.cpp  mutex_loader.cpp  mutex_node_factory.hpp
mutex v0.0.1/modules/center/release/src/mutex_wifi_node/: mutex_wifi_impl.cpp  mutex_wifi_impl.hpp
mutex v0.0.2/: Makefile
mutex v0.0.2/include/: node_base.hpp
mutex v0.0.2/lib/product/: mutex
mutex v0.0.2/modules/: CMakeLists.txt
mutex v0.0.2/modules/center/release/src/components/utils/: utils.crc.c  utils_crc8.h
mutex v0.0.2/modules/center/release/src/mutex_data_node/: mutex_data_impl.cpp
mutex/include/: camera.hpp  data_camera_impl.hpp  data_echo_impl.hpp  data_finger_impl.hpp  data_keyboard_impl.hpp  mutex_node.hpp  serialInterface.hpp  serialTermios.hpp  shm.hpp  zmq_publisher.hpp
mutex/modules/camera/: CMakeLists.txt
mutex/modules/camera/src/: camera.cpp  data_camera_impl.cpp  shm.cpp  zmq_publisher.cpp
mutex/modules/center/release/: CMakeLists.txt
mutex/modules/center/release/scripts/: compress.sh
mutex/modules/center/release/src/: main.cpp  node_impl.hpp
mutex/modules/center/release/src/components/: mutex_common.hpp  mutex_event.hpp  mutex_node.hpp  mutex_node_factory.cpp  mutex_node_mgr.cpp  periodTask.hpp
mutex/modules/center/release/src/components/serial/: serialTermios.cpp  serialTermios.hpp
mutex/modules/center/release/src/components/utils/: utils.c  utils_crc.h
mutex/modules/center/release/src/mutex_data_node/: data_serial_impl.hpp  mutex_data_impl.hpp  mutex_data_node.cpp
mutex/modules/center/release/src/mutex_task_node/: mutex_task_impl.cpp  mutex_task_node.hpp
mutex/modules/center/release/src/mutex_task_node/task_component/AS608/: as608.cpp
mutex/modules/center/test/: CMakeLists.txt
mutex/modules/center/test/src/: main.cpp
mutex/modules/echo/: CMakeLists.txt  data_echo_impl.cpp
mutex/modules/finger/: data_finger_impl.cpp
mutex/modules/finger/fingerlib/: finger.cpp  finger.hpp
mutex/modules/keyBoard/: CMakeLists.txt  data_keyboard_impl.cpp
mutex/modules/main/: CMakeLists.txt
mutex/modules/main/src/: main.cpp  mutex_loader.cpp  mutex_loader.hpp  mutex_node.cpp  mutex_node_factory.cpp  mutex_node_factory.hpp  node_impl.cpp  node_impl.hpp
mutex/modules/serial/: CMakeLists.txt  serialInterface.cpp  serialTermios.cpp
mutex/modules/serial/test/: CMakeLists.txt
mutex/modules/serial/test/src/: main.cpp
mutex/scripts/: camera.sh
origin/mutex/lib/product/: mutex_test  serial_test
origin/mutex/modules/center/: CMakeLists.txt
origin/mutex/modules/center/release/scripts/: wifi_config.sh
origin/mutex/modules/center/release/src/components/: mutex_event.hpp  mutex_loader.hpp  mutex_node.cpp  mutex_node_factory.cpp  mutex_node_mgr.hpp  periodTask.cpp
origin/mutex/modules/center/release/src/components/serial/: serialInterface.cpp
origin/mutex/modules/center/release/src/components/utils/: utils.h  utils_crc8.c
origin/mutex/modules/center/release/src/mutex_data_node/: data_serial_impl.cpp  data_serial_impl.hpp  mutex_data_node.hpp
origin/mutex/modules/center/release/src/mutex_task_node/: mutex_task_impl.hpp  mutex_task_node.cpp
origin/mutex/modules/center/release/src/mutex_task_node/task_component/AS608/: as608.hpp
origin/mutex/modules/center/release/src/mutex_wifi_node/: mutex_wifi_node.cpp  mutex_wifi_node.hpp
origin/mutex/modules/serial/: CMakeLists.txt
serial/: modules.lnk  serialInterface.cpp  serialTermios.cpp
