### --------------------------------------------------------------------
### Import cmps
### --------------------------------------------------------------------
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/release/)
### --------------------------------------------------------------------
### Import modules
### --------------------------------------------------------------------
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/test/)